# test

./: .gitattributes  .gitignore  CLAUDE.framework.md  CLAUDE.md  LICENSE  README  README.md  SCENARIOS.md  pyproject.toml
.claude/: .framework-version  .skills-version  DECISIONS.md  ECOSYSTEM.md  FRAMEWORK-SUGGESTIONS.md  GOTCHAS.md  STATUS.md  TASKS.md  claude-code-dev-framework.md  claude-progress.txt  framework-metrics.md  review-findings.md  settings.json  test-findings.md
.claude/agents/council/: chairman.md  contrarian.md  executor.md  expansionist.md  first-principles.md  outsider.md
.claude/agents/framework/: architect.md  developer.md  reviewer.md  tester.md
.claude/commands/: analyse.md  build.md  council.md  fleet.md  healthcheck.md  housekeeping.md  plan.md  review.md  security.md  test.md  wrapup.md
.claude/framework/: healthcheck.conf.template  init.sh
.claude/framework/agent_docs/: architecture.md  behavioral-principles.md  (+3 more)
.claude/hooks/: auto-format.sh  auto-lint.sh  block-dangerous-commands.py  enforce-state-update.sh  filter-test-output.sh  framework-drift-guard.sh  post-edit-dispatch.sh  statusline.sh  verify-deps.sh
01_Project/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
01_Project/src/: base62.ts  stringUtils.ts  types.ts  urlNormalizer.ts
01_Project/tests/: base62.test.ts  stringUtils.test.ts  urlNormalizer.test.ts
02_solution/: README.md  rate-limiting-design.md  url-shortener-design.md
sample_app/: __init__.py  cli.py  storage.py
samples/: sample.rs  sample.toml
tests/: conftest.py  test_storage.py
(+372 files in other folders)
